update webchat: add time, source
Former-commit-id: a300df3106695c08f1f6e10579ac16ecbcb04f0a [formerly 467c4a40d490c60db82a9e0984c76ce827f50320]
Former-commit-id: 839c69f6eb05cd73a15d29126257447b7c7a4560
Former-commit-id: 0691a3fd7736c2733277251e083e2eede4d5d728

--- a/chatbot/src/templates/chat.html
+++ b/chatbot/src/templates/chat.html
@@ -44,6 +44,14 @@
 		background: rgba(0,0,0,.1);
 	}
 
+	.message_info {
+		font-size: 12px;
+		background: 'white';
+		float: left;
+		margin-left: 2px;
+		padding: 2px;
+	}
+
 	.message_bot{
 		background: #eee;
 		float: left;
