[Card Game] Auto Get IP Adress

--- a/card_game/scripts/templates/cardgame.html
+++ b/card_game/scripts/templates/cardgame.html
@@ -57,9 +57,8 @@ Your browser does not support the HTML5 canvas tag.
 <p id="textBox" align=center>Hello</p>
 </div>
 
-
 <!-- <script language="JavaScript" src="websoc.js"></script> -->
-<script language="JavaScript" src="/static/cardgame.js"></script>
+<script language="JavaScript" src="/static/cardgame.js" data-address ="{{address}}"></script>
 
 
 </body>
